--- a/server/src/styles/default.less
+++ b/server/src/styles/default.less
@@ -15,35 +15,31 @@
     text-align: center;
 }
 
-h1 {
-    color: #555;
-    font-size: 90px;
-    padding: @large_padding;
+.heading {
+    &.heading-large {
+        color: #555;
+        font-size: 90px;
+        padding: @large_padding;
+    }
 }
 
-.search-content {
+.form-component {
+    height: 46px;
+    padding: 10px 16px;
+    border-radius: @border_radius;
+    font-size: 18px;
+}
 
-    width: 500px;
+.textbox {
+    .form-component;
+    border: 1px solid #ccc;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
+}
 
-    .search-box {
-        height: 46px;
-        padding: 10px 16px;
-        font-size: 18px;
-        border: 1px solid #ccc;
-        border-radius: @border_radius;
-        box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-        width: 350px;
-    }
-
-    .button {
-        cursor: pointer;
-        color: #fff;
-        background-color: #5bc0de;
-        border: 1px solid #46b8da;
-        height: 46px;
-        padding: 10px 16px;
-        font-size: 18px;
-        border-radius: @border_radius;
-        margin-left: @large_padding;
-    }
+.button {
+    .form-component;
+    cursor: pointer;
+    color: #fff;
+    background-color: #5bc0de;
+    border: 1px solid #46b8da;
 }
